--- a/src/main/webapp/status/css/signin.css
+++ b/src/main/webapp/status/css/signin.css
@@ -1,21 +1,41 @@
-html,
-body {
-  height: 100%;
-}
+/*html,*/
+/*body {*/
+  /*height: 100%;*/
+/*}*/
 
-body {
-  display: -ms-flexbox;
-  display: -webkit-box;
-  display: flex;
-  -ms-flex-align: center;
-  -ms-flex-pack: center;
-  -webkit-box-align: center;
-  align-items: center;
-  -webkit-box-pack: center;
-  justify-content: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5;
+html,body{
+  width:100%;
+  height:100%;
+  /*background:;*/
+}
+/*body {*/
+  /*display: -ms-flexbox;*/
+  /*display: -webkit-box;*/
+  /*display: flex;*/
+  /*-ms-flex-align: center;*/
+  /*-ms-flex-pack: center;*/
+  /*-webkit-box-align: center;*/
+  /*align-items: center;*/
+  /*-webkit-box-pack: center;*/
+  /*justify-content: center;*/
+  /*padding-top: 40px;*/
+  /*padding-bottom: 40px;*/
+  /*background-color: #f5f5f5;*/
+/*}*/
+#sigin{
+  position: absolute;
+  left: 40%;
+  top: 20%;
+
+}
+#particles-js{
+  width: 100%;
+  height: 100%;
+  /*background-color: ;*/
+  /*background-image: url('');*/
+  background-size: cover;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
 }
 
 .form-signin {
@@ -23,9 +43,6 @@ body {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
-}
-.form-signin .checkbox {
-  font-weight: 400;
 }
 .form-signin .form-control {
   position: relative;
