--- a/src/main/webapp/WEB-INF/view/Template/sidebar.html
+++ b/src/main/webapp/WEB-INF/view/Template/sidebar.html
@@ -21,20 +21,20 @@
             </li>
 
             <li class="sub-menu">
-                <a href="index.html">
+                <a href="/message">
                     <i class="fa fa-comments-o"></i>
                     <span>消息中心</span>
                 </a>
             </li>
 
             <li class="sub-menu">
-                <a href="index.html">
+                <a href="/search">
                     <i class="fa fa-search"></i>
                     <span>好友查找</span>
                 </a>
             </li>
             <li class="sub-menu">
-                <a href="index.html">
+                <a href="/start">
                     <i class="fa fa-star"></i>
                     <span>特别关注</span>
                 </a>
@@ -48,6 +48,12 @@
                     <li><a  href="basic_table.html"><i class="fa fa-key fa-fw"></i>修改密码</a></li>
                     <li><a  href="responsive_table.html"><i class="fa fa-address-card"></i>修改个人信息</a></li>
                 </ul>
+            </li>
+            <li class="sub-menu">
+                <a href="/about">
+                    <i class="fa fa-star"></i>
+                    <span>About</span>
+                </a>
             </li>
 
         </ul>
