--- a/src/main/webapp/WEB-INF/view/Template/sidebar.html
+++ b/src/main/webapp/WEB-INF/view/Template/sidebar.html
@@ -45,18 +45,17 @@
                     <span>设置</span>
                 </a>
                 <ul class="sub">
-                    <li><a  href="basic_table.html"><i class="fa fa-key fa-fw"></i>修改密码</a></li>
-                    <li><a  href="responsive_table.html"><i class="fa fa-address-card"></i>修改个人信息</a></li>
+                    <li><a  href="/user/updateinfo"><i class="fa fa-address-card"></i>修改个人信息</a></li>
+                    <li><a  href="/user/updatepasswd"><i class="fa fa-key fa-fw"></i>修改密码</a></li>
                 </ul>
             </li>
             <li class="sub-menu">
                 <a href="/about">
                     <i class="fa fa-star"></i>
-                    <span>About</span>
+                    <span>联系我们</span>
                 </a>
             </li>
 
         </ul>
-        <!-- sidebar menu end-->
     </div>
 </aside>
