--- a/src/main/webapp/WEB-INF/view/classfriends.html
+++ b/src/main/webapp/WEB-INF/view/classfriends.html
@@ -57,7 +57,7 @@
                 <div class="col-md-4" style="margin-bottom: 50px" id="item">
                     <img id="img" src="${classmate.userlogo}" class="img-rounded"/>
                     <p class="p1">${classmate.name} &nbsp;&nbsp; ${classmate.stuid}</p>
-                    <P class="p2">${classmate.signature}</P>
+                    <P class="p2">${classmate.signature!}</P>
                 </div>
                 </a>
             </#list>
