--- a/src/main/webapp/WEB-INF/view/friend.html
+++ b/src/main/webapp/WEB-INF/view/friend.html
@@ -54,7 +54,7 @@
                 <div class="col-lg-3">
                     <div class="showback">
                         <h2><i class="fa fa-address-card"></i>&nbsp;&nbsp;所属系院</h2>
-                        <h1 style="text-align: center">计算机科学与技术</h1>
+                        <h1 style="text-align: center">${friend.speciality}</h1>
                     </div><!--/showback -->
                 </div>
                 <div class="col-lg-4">
@@ -73,23 +73,23 @@
                 <div class="col-lg-12">
                     <div class="showback" style="height:300px">
                         <h2><i class="fa fa-file-text-o"></i>&nbsp;&nbsp;个性签名</h2><hr>
-                        <h2>${friend.signature}</h2>
+                        <h2>${friend.signature!}</h2>
                     </div><!--/showback -->
                 </div>
                 <div class="col-lg-6">
                     <div class="showback" style="height:358px">
                         <h2><i class="fa fa-file-text-o"></i>&nbsp;&nbsp;爱好</h2><hr>
-                        <h2>${friend.like}</h2>
+                        <h2>${friend.like!}</h2>
                     </div><!--/showback -->
                 </div>
                 <div class="col-lg-6">
                     <div class="showback" style="height:358px">
                         <h2><i class="fa fa-file-text-o"></i>&nbsp;&nbsp;联系方式</h2><hr>
 
-                        <h2 ><i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.phtoto}</h2>
-                        <h2 ><i class="fa fa-qq"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.qq}</h2>
-                        <h2 ><i class="fa fa-wechat"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.wechat}</h2>
-                        <h2 ><i class="fa fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.email}</h2>
+                        <h2 ><i class="fa fa-phone"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.phtoto!}</h2>
+                        <h2 ><i class="fa fa-qq"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.qq!}</h2>
+                        <h2 ><i class="fa fa-wechat"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.wechat!}</h2>
+                        <h2 ><i class="fa fa-envelope"></i>&nbsp;&nbsp;&nbsp;&nbsp;${friend.email!}</h2>
                     </div><!--/showback -->
                 </div>
 
@@ -163,8 +163,6 @@
 </script>
 
 <!-- js placed at the end of the document so the pages load faster -->
-
-<script src="/assets/js/jjquery-1.8.3.min.js"></script>
 <script src="/assets/js/bootstrap.min.js"></script>
 <script class="include" type="text/javascript" src="/assets/js/jquery.dcjqaccordion.2.7.js"></script>
 <script src="/assets/js/jquery.scrollTo.min.js"></script>
