--- a/src/main/webapp/WEB-INF/view/message.html
+++ b/src/main/webapp/WEB-INF/view/message.html
@@ -58,7 +58,7 @@
                         <img id="img" src="${message.userlogo}" class="img-rounded"/>
                         </a>
                         <p class="p1">${message.name} &nbsp;&nbsp; ${message.speciality}</p>
-                        <P class="p2">${message.content}</P>
+                        <P class="p2">${message.content!}</P>
                         <p>${message.datetime}</p>
                     </div>
 
