--- a/src/main/webapp/WEB-INF/view/start.html
+++ b/src/main/webapp/WEB-INF/view/start.html
@@ -57,7 +57,7 @@
                     <div class="col-md-4" style="margin-bottom: 50px" id="item">
                         <img id="img" src="${start.userlogo}" class="img-rounded"/>
                         <p class="p1">${start.name} &nbsp;&nbsp; ${start.speciality}</p>
-                        <P class="p2">${start.signature}</P>
+                        <P class="p2">${start.signature!}</P>
                     </div>
                 </a>
             </#list>
